k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: balance-alert
  labels:
    name: balance-alert
